<resources>
    <string name="app_name">Motorizados</string>
    <string name="title_activity_principal">Motoriza2</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="userEmail">Email</string>
    <string name="userName">User</string>

    <string name="createCustomer">Create Customer</string>
    <string name="ErrorValidateFields">Please check the Value</string>

    <string name="ErrorMessage">Please Login</string>

    <string name="facebook_app_id">272966253190592</string>
    <string name="fb_login_protocol_scheme">fb272966253190592</string>

    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="complete_delivery">Complete delivery</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="nav_Form">Form</string>
    <string name="nav_Delivery">Delivery</string>
    <string name="nav_Login">Log In</string>
    <string name="nav_Customer">Customer</string>

    <!-- Strings for login -->
    <string name="loading">Connecting...</string>

    <!-- Para correo/contraseña y más... -->
    <string name="label_emailpassword">Authentication Mail / Password</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="correo_contrasena_status_fmt">Email: %1$s (verify: %2$b)</string>
    <string name="correo_contrasena_title_text">Login</string>

    <string name="desconectar">Log off</string>
    <string name="conectarse">Connect</string>
    <string name="registrarse">Check in</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>

    <string name="signed_in">Connected</string>
    <string name="signed_out">Disconnected</string>

    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>

    //para google y más...
    <string name="google_title_text">Authenticate with Google</string>
    <string name="sign_out">Disconnect</string>
    <string name="revoke">Revoke</string>
    <string name="label_google_sign_in">Firebase + Google Authentication</string>
    <string name="desc_google_sign_in">Your Google Account is used to authenticate.</string>
    <string name="google_status_fmt">Google User: %s</string>

    //Para autenticarse con codigo desde el telefono
    <string name="label_phone_auth">Code Authentication to Phone</string>
    <string name="desc_phone_auth">Using an sms to phone to authenticate to Firebase.</string>
    <string name="phone_title_text">Phone number</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="hint_verification_code">Verification code</string>
    <string name="start_phone_auth">Send</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>

    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>

    <string name="verify_email">Verify Email</string>
    <string name="custom_token">Custom Token</string>
    <string name="token_null">Token: null</string>

    <string name="desc_firebase_lockup">Firebase logo and name</string>

    <string name="firebase_user_management">Firebase User Management</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>

    <!-- Fin -->

    <string name="detail">Detail</string>
    <string name="send_sms">Send SMS</string>
    <string name="start_call">Start call</string>
    <string name="view_detail">View detail</string>
    <string name="delivery_detail">Delivery Detail</string>
    <string name="deliver">Delivery</string>
    <string name="customer_details">Customer Details</string>
    <string name="exp_month">Exp. Month</string>
    <string name="exp_year">Exp. Year</string>
    <string name="amount">Amount</string>
    <string name="credit_card_number">Credit Card Number</string>
    <string name="credit_card_information">Credit Card Information</string>
    <string name="work_place">Work place</string>
    <string name="salary">Salary</string>
    <string name="customer_information">Customer Information</string>
    <string name="identification">Identification</string>
    <string name="credit_card_image">Credit Card Image</string>
    <string name="complete">Complete</string>
    <string name="picture">Picture</string>
    <string name="nav_Deliveries">Deliveries</string>
    <string name="delivered">Delivered</string>
    <string name="failed_to_load_image">Failed to load picture</string>
    <string name="nav_Logout">Logout</string>
    <string name="credit_card_type">Credit Card Type</string>
    <string name="auth_successful">Successfully authenticated</string>
    <string name="auth_started">Authentication process started</string>
    <string name="connection_error">Connection error</string>
    <string name="develiry_completed">Delivery completed!</string>
    <string name="creating_account">Creating account…</string>
    <string name="account_created">Account created!</string>
    <string name="failed_to_create_account">Failed to create account!</string>
    <string name="required">This is required!</string>
    <string name="failed_to_send_verification_email">Failed to send verification email!</string>
    <string name="verification_email_sent">Verification email sent!</string>
    <string name="provide_a_valid_email">Provide a valid email!</string>
</resources>
