<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_Login"
            android:icon="@drawable/loginuser"
            android:title="@string/nav_Login" />
        <item
            android:id="@+id/nav_Delivery"
            android:icon="@drawable/parcel"
            android:title="@string/nav_Deliveries" />
        <item
            android:id="@+id/nav_Customer"
            android:icon="@drawable/customer"
            android:title="@string/nav_Customer" />

        <item
            android:id="@+id/nav_Logout"
            android:icon="@drawable/logout"
            android:title="@string/nav_Logout" />
    </group>
</menu>
