<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.valkzer.motorizados.Activities.CompleteDeliveryActivity">

    <EditText
        android:id="@+id/txtCustomerIdentification"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/identification"
        android:inputType="text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblCustomerInformation"
        android:layout_marginStart="8dp"/>

    <TextView
        android:id="@+id/lblCustomerInformation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/customer_information"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="8dp"/>

    <EditText
        android:id="@+id/txtCustomerSalary"
        android:layout_width="368dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/salary"
        android:inputType="number"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/txtCustomerIdentification"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"/>

    <EditText
        android:id="@+id/txtWorkplace"
        android:layout_width="368dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/work_place"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/txtCustomerSalary"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"/>

    <TextView
        android:id="@+id/lblCreditCardInformation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/credit_card_information"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.483"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/imgIdentification"/>

    <EditText
        android:id="@+id/txtCreditCardNumber"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="7dp"
        android:ems="10"
        android:hint="@string/credit_card_number"
        android:inputType="number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblCreditCardInformation"/>

    <Spinner
        android:id="@+id/cboCreditCardType"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="7dp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf="@+id/txtCreditCardNumber"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblCreditCardInformation"/>

    <EditText
        android:id="@+id/txtCreditCardExpMonth"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/exp_month"
        android:inputType="number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCreditCardNumber"
        android:layout_marginStart="8dp"/>

    <EditText
        android:id="@+id/txtCreditCardExpYear"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/exp_year"
        android:inputType="number"
        app:layout_constraintLeft_toRightOf="@+id/txtCreditCardExpMonth"
        app:layout_constraintTop_toBottomOf="@+id/txtCreditCardNumber"
        android:layout_marginStart="10dp"/>

    <EditText
        android:id="@+id/txtDeliveryAmount"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/amount"
        android:inputType="number|numberDecimal"
        app:layout_constraintLeft_toRightOf="@+id/txtCreditCardExpYear"
        app:layout_constraintTop_toBottomOf="@+id/txtCreditCardNumber"
        android:layout_marginStart="8dp"/>

    <Button
        android:id="@+id/btnIdentificationPicture"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/picture"
        android:onClick="selectIdentificationPicture"
        app:layout_constraintLeft_toRightOf="@+id/txtCustomerIdentification"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblCustomerInformation"
        app:layout_constraintHorizontal_bias="0.507"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"/>

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/complete"
        android:onClick="completeDelivery"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/txtCreditCardExpYear"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>

    <ImageView
        android:id="@+id/imgIdentification"
        android:layout_width="wrap_content"
        android:layout_height="125dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtWorkplace"
        app:srcCompat="@android:drawable/ic_menu_gallery"/>

</android.support.constraint.ConstraintLayout>
