<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.valkzer.motorizados.Activities.DeliveryDetailActivity">

    <TextView
        android:id="@+id/lblName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblCustomerDetails"/>

    <TextView
        android:id="@+id/lblAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="22dp"
        android:text="@string/address"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblName"/>

    <TextView
        android:id="@+id/lblCustomerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/lblCustomerDetails"
        android:layout_marginStart="40dp"
        app:layout_constraintLeft_toRightOf="@+id/lblName"
        android:layout_marginLeft="42dp"/>

    <TextView
        android:id="@+id/lblCustomerAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginTop="21dp"
        app:layout_constraintTop_toBottomOf="@+id/lblCustomerName"
        android:layout_marginStart="40dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/lblCustomerName"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/lblCustomerName"
        app:layout_constraintHorizontal_bias="0.937"/>

    <TextView
        android:id="@+id/lblPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/phone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblAddress"/>

    <TextView
        android:id="@+id/lblCustomerPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginTop="17dp"
        app:layout_constraintTop_toBottomOf="@+id/lblCustomerAddress"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/lblCustomerAddress"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/lblCustomerAddress"
        app:layout_constraintHorizontal_bias="1.0"/>

    <TextView
        android:id="@+id/lblCustomerDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/customer_details"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/deliver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <ImageButton
        android:id="@+id/btnStartCall"
        android:layout_width="65dp"
        android:layout_height="60dp"
        android:layout_marginLeft="105dp"
        android:layout_marginStart="105dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnSendSMS"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnSendSMS"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@android:drawable/stat_sys_phone_call"
        android:onClick="startCall"/>

    <ImageButton
        android:id="@+id/btnSendSMS"
        android:layout_width="65dp"
        android:layout_height="60dp"
        app:srcCompat="@android:drawable/stat_notify_chat"
        android:layout_marginRight="105dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="33dp"
        app:layout_constraintTop_toBottomOf="@+id/lblCustomerPhone"
        android:layout_marginEnd="105dp"
        android:onClick="sendSMS"/>

    <TextView
        android:id="@+id/lblDeliveryDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:text="@string/delivery_detail"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSendSMS"/>

    <TextView
        android:id="@+id/lblDeliveryDescription"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="9dp"
        android:text=""
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblDeliveryDetail"/>


</android.support.constraint.ConstraintLayout>
